--- a/src/components/song-table/template.html
+++ b/src/components/song-table/template.html
@@ -28,7 +28,7 @@
 					<button class="btn btn-success" type="button" v-on:click="add">save</button>
 				</td>
 			</tr>
-			<song-row v-for="(song, index) in songs" v-bind:song="song" v-bind:index="index"></song-row>
+			<song-row v-for="(song, index) in songs" v-bind:song="song" v-bind:index="index" v-bind:key="song.id"></song-row>
 		</tbody>
 	</table>
 </div>
