--- a/src/components/song-table/template.html
+++ b/src/components/song-table/template.html
@@ -1,34 +1,27 @@
-<div class="table-responsive">
-	<table class="table">
-		<thead class="thead-dark">
-			<tr>
-				<th></th>
-				<th>Song</th>
-				<th>Artist</th>
-				<th>Album</th>
-				<th>Genre</th>
-				<th>Length</th>
-				<th>
-					<button v-if="beingAdded" class="btn btn-default" type="button" v-on:click="cancel">cancel</button>
-					<button v-else class="btn btn-primary" type="button" v-on:click="addSongMode">add</button>
-				</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr v-show="beingAdded" v-on:keyup.enter="add" v-on:keyup.esc="cancel">
-				<td></td>
-				<td class="song-name"><input class="form-control" type="text" ref="songName" v-model="newSong.name"/></td>
-				<td class="song-artist"><input class="form-control" type="text" v-model="newSong.artist"/></td>
-				<td class="song-album"><input class="form-control" type="text" v-model="newSong.album"/></td>
-				<td class="song-genre"><input class="form-control" type="text" v-model="newSong.genre"/></td>
-				<td class="song-length">
-					<length-input v-model="newSong.length"></length-input>
-				</td>
-				<td>
-					<button class="btn btn-success" type="button" v-on:click="add">save</button>
-				</td>
-			</tr>
-			<song-row v-for="(song, index) in songs" v-bind:song="song" v-bind:index="index" v-bind:key="song.id"></song-row>
-		</tbody>
-	</table>
+<div>
+	<div class="bg-dark text-light p-2 rounded-top">
+		<h3>Songs</h3>
+	</div>
+	<div class="table-responsive">
+		<table class="table table-bordered">
+			<thead class="thead-dark">
+				<tr>
+					<th>Song</th>
+					<th>Artist</th>
+					<th>Album</th>
+					<th>Genre</th>
+					<th>Length</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr v-for="song in songs">
+					<td>{{song.name}}</td>
+					<td>{{song.artist}}</td>
+					<td>{{song.album}}</td>
+					<td>{{song.genre}}</td>
+					<td>{{song.length}}</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 </div>
