added add song button in song table

--- a/src/components/song-table/template.html
+++ b/src/components/song-table/template.html
@@ -1,6 +1,7 @@
 <div>
-	<div class="bg-dark text-light p-2 rounded-top">
+	<div class="d-flex justify-content-between bg-dark text-light p-2 rounded-top">
 		<h3>Songs</h3>
+		<button class="btn btn-primary" type="button">Add Song</button>
 	</div>
 	<div class="table-responsive">
 		<table class="table table-bordered">
