--- a/src/components/song-table/template.html
+++ b/src/components/song-table/template.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="d-flex justify-content-between bg-dark text-light p-2 rounded-top">
 		<h3>Songs</h3>
-		<button class="btn btn-primary" type="button">Add Song</button>
+		<button class="btn btn-primary" type="button" data-toggle="modal" data-target="#addSongModal">Add Song</button>
 	</div>
 	<div class="table-responsive">
 		<table class="table table-bordered">
@@ -25,4 +25,35 @@
 			</tbody>
 		</table>
 	</div>
+
+	<bs-modal id="addSongModal" title="Add Song">
+		<template v-slot:body>
+			<form>
+				<div class="form-group">
+					<label for="name">Name</label>
+					<input v-model="song.name" class="form-control" type="text" name="name" id="name"/>
+				</div>
+				<div class="form-group">
+					<label for="artist">Artist</label>
+					<input v-model="song.artist" class="form-control" type="text" name="artist" id="artist"/>
+				</div>
+				<div class="form-group">
+					<label for="album">Album</label>
+					<input v-model="song.album" class="form-control" type="text" name="album" id="album"/>
+				</div>
+				<div class="form-group">
+					<label for="genre">Genre</label>
+					<input v-model="song.genre" class="form-control" type="text" name="genre" id="genre"/>
+				</div>
+				<div class="form-group">
+					<label for="length">Length</label>
+					<input v-model="song.length" class="form-control" type="text" name="length" id="length"/>
+				</div>
+			</form>
+		</template>
+		<template v-slot:footer>
+			<button v-on:click="resetSong" class="btn btn-secondary" type="button">Cancel</button>
+			<button v-on:click="addSong" class="btn btn-success" type="button">Add</button>
+		</template>
+	</bs-modal>
 </div>
