Added vue-notification for displaying alerts

--- a/src/components/app/template.html
+++ b/src/components/app/template.html
@@ -1,7 +1,18 @@
 <main role="main">
+
 	<nav-bar></nav-bar>
+
 	<div class="container-fluid">
 		<router-view></router-view>
 	</div>
-	<alert-box></alert-box>
+
+	<notifications position="top right">
+		<template slot="body" slot-scope="props">
+			<div class="alert" v-bind:class="props.item.type" role="alert">
+				<strong>{{props.item.title}}</strong>
+				<p>{{props.item.text}}</p>
+			</div>
+		</template>
+	</notifications>
+
 </main>
