--- a/src/components/song-table/template.html
+++ b/src/components/song-table/template.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="d-flex justify-content-between bg-dark text-light p-2 rounded-top">
 		<h3>Songs</h3>
-		<button class="btn btn-primary" type="button" data-toggle="modal" data-target="#addSongModal">Add Song</button>
+		<button class="btn btn-success" type="button" data-toggle="modal" data-target="#addSongModal">Add Song</button>
 	</div>
 	<div class="table-responsive">
 		<table class="table table-bordered table-hover">
@@ -12,21 +12,28 @@
 					<th>Album</th>
 					<th>Genre</th>
 					<th>Length</th>
+					<th>Actions</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr v-for="(song, index) in songs" v-bind:class="song.cls" v-on:click="setSelected(index)">
+				<tr v-for="(song, index) in songs">
 					<td>{{song.name}}</td>
 					<td>{{song.artist}}</td>
 					<td>{{song.album}}</td>
 					<td>{{song.genre}}</td>
 					<td>{{song.length}}</td>
+					<td>
+						<div class="btn-group">
+							<button v-on:click="edit(index)" class="btn btn-warning" type="button" data-toggle="modal" data-target="#addSongModal">edit</button>
+							<button v-on:click="edit(index)" class="btn btn-danger" type="button" data-toggle="modal" data-target="#deleteSongModal">delete</button>
+						</div>
+					</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 
-	<bs-modal id="addSongModal" title="Add Song">
+	<bs-modal id="addSongModal" v-bind:title="addEditTitle" v-on:hidden="resetSong">
 		<template v-slot:body>
 			<form>
 				<div class="form-group">
@@ -52,8 +59,19 @@
 			</form>
 		</template>
 		<template v-slot:footer>
-			<button v-on:click="resetSong" class="btn btn-secondary" type="button">Cancel</button>
-			<button v-on:click="addSong" class="btn btn-success" type="button">Add</button>
+			<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+			<button v-on:click="saveSong" class="btn btn-primary" type="button" data-dismiss="modal">Save</button>
 		</template>
 	</bs-modal>
+
+	<bs-modal id="deleteSongModal" title="Delete Song?" v-on:hidden="resetSong">
+		<template v-slot:body>
+			<p>Are you sure you want to delete "{{song.name}}" ?</p>
+		</template>
+		<template v-slot:footer>
+			<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+			<button v-on:click="deleteSong" class="btn btn-danger" type="button" data-dismiss="modal">Delete</button>
+		</template>
+	</bs-modal>
+
 </div>
