--- a/src/components/song-table/template.html
+++ b/src/components/song-table/template.html
@@ -4,7 +4,7 @@
 		<button v-on:click="add" class="btn btn-success" type="button">Add Song</button>
 	</div>
 	<div class="table-responsive">
-		<table class="table table-bordered table-hover">
+		<table class="table table-bordered table-hover table-sm text-center">
 			<thead class="thead-dark">
 				<tr>
 					<th>Song</th>
@@ -17,12 +17,12 @@
 			</thead>
 			<tbody>
 				<tr v-for="(song, index) in songs">
-					<td>{{song.name}}</td>
-					<td>{{song.artist}}</td>
-					<td>{{song.album}}</td>
-					<td>{{song.genre}}</td>
-					<td>{{song.length}}</td>
-					<td>
+					<td class="align-middle">{{song.name}}</td>
+					<td class="align-middle">{{song.artist}}</td>
+					<td class="align-middle">{{song.album}}</td>
+					<td class="align-middle">{{song.genre}}</td>
+					<td class="align-middle">{{song.length}}</td>
+					<td class="align-middle">
 						<div class="btn-group">
 							<button v-on:click="edit(index)" class="btn btn-warning" type="button">edit</button>
 							<button v-on:click="remove(index)" class="btn btn-danger" type="button">delete</button>
