updated custom scss file to allow bootstrap custom theme

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,1 +1,9 @@
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+
+/*
+Put custom theme here
+*/
+
 @import '~bootstrap/scss/bootstrap';
