--- a/src/components/song-table/template.html
+++ b/src/components/song-table/template.html
@@ -54,7 +54,7 @@
 				</div>
 				<div class="form-group">
 					<label for="length">Length</label>
-					<input v-model="song.length" class="form-control" type="text" name="length" id="length"/>
+					<input v-model.number="song.length" class="form-control" type="text" name="length" id="length"/>
 				</div>
 			</form>
 		</template>
